[project]
name = "agentic-rag"
version = "0.2.0"
description = "RAG system without LangChain dependencies"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pypdf2>=3.0.0",
    "pdfplumber>=0.11.0",
    "pandas>=2.0.0",
    "sentence-transformers>=3.0.0",
    "chromadb>=0.5.0",
    "torch>=2.0.0",
    "python-dotenv>=1.0.0",
    "ollama>=0.5.0",
    "openai>=1.0.0",
    "numpy>=1.24.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.29",
    "pypdf>=5.9.0",
    "tiktoken>=0.11.0",
    "optimum[onnxruntime-gpu]>=1.27.0",
    "psutil>=7.0.0",
    "pymupdf>=1.26.3",
]
